2014-11-04  Karl Berry  <karl@gnu.org>

	* install-info/tests/Makefile.am (TESTS, EXTRA_DIST):
	new tests 55, 56 for --defsection; plus the new files.
	Turns out --defentry was a no-op, so omit it from help string
	but leave code in case someone wants it.
	* NEWS: mention new option.

2014-11-04  Pietro Cerutti  <gahr@FreeBSD.org>

	* install-info/install-info.c: new options --defentry and
	--defsection (written for BSD).  Retrieved from
	http://svnweb.freebsd.org/ports/head/print/texinfo/files/patch-install-info_install-info.c
	
2014-11-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi: no leading @ characters in command index.

2014-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_node): Make returned node safely 
	free-able with free_history_node.
	(xrefs_of_manpage): Initialize line_number fields of REFERENCE 
	objects.

2014-11-02  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm (_convert), 
	tp/Texinfo/Convert/Text.pm (heading): add an indent length
	argument to heading() and use it to indent the underlying 
	symbols.  Report from Mahlon Smith.

2014-11-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Include line numbers in 
	apropos node.

2014-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_node_contents): Return a new NODE 
	object if node was from a file, and don't set reference list of 
	passed-in node.

	* info/nodes.c (info_node_of_tag): Always call 
	scan_node_contents.  Node data like the contents pointer or 
	reference list is not saved in the tag table any more.
	(set_tag_nodelen): Passed in tag points to start of node 
	separator instead of just after it.

	* info/nodes.h (N_Unstored): Symbol deleted.
	* info/footnotes.c (make_footnotes_node),
	* info/indices.c (info_index_apropos, info_virtual_index)
	* info/nodemenu.c (list_visited_nodes),
	* info/echo-area.c (ea_possible_completions): Mark generated 